# markdown_web_browser

./: .env.example  .gitignore  AGENTS.md  BROWSER_UI_IMPLEMENTATION.md  DEPLOYMENT.md  Dockerfile  FEATURES_IMPLEMENTED.md  LICENSE  OPTIMAL_DEDUPLICATION_STRATEGY.md  PLAN_TO_IMPLEMENT_MARKDOWN_WEB_BROWSER_PROJECT.md  PROJECT_STATUS_AUDIT.md  README.md  REMAINING_STEPS_LEFT_TO_FINISH_PROJECT.md  TILE_OVERLAP_ANALYSIS.md  bead_status.txt  deploy.sh  docker-compose.yml  install.sh  olmocr_cli.py  plan_note.txt  pyproject.toml  test_pyvips_png.py
.beads/: .gitignore  beads.left.jsonl  issues.jsonl  last-touched
app/: auth.py  blocklist.py  cache.py  capture.py  capture_warnings.py  crawler.py  dedup.py  dom_links.py  embeddings.py  hardware.py  jobs.py  local_ocr.py  main.py  ocr_client.py  ocr_fallback.py  ocr_policy.py  queue.py  rate_limit.py  schemas.py  semantic_post.py  settings.py  stitch.py  store.py  tiler.py  warning_log.py
config/: blocklist.json
docs/: BROWSER_UI.md  architecture.md  blocklist.md  config.md  models.yaml  olmocr_cli.md  ops.md
scripts/: __init__.py  capture_readme_screenshots.py  check_metrics.py  compute_slo.py  dev_run.sh  fake_cli.py  manage_api_keys.py  mdwb_cli.py  mock_ocr_server.py  olmocr_cli.py  prom_scrape_check.py  replay_job.sh  report_pytest_summary.py  run_checks.sh  run_server.py  run_smoke.py  show_latest_smoke.py  test_e2e_comprehensive.py  test_integration_advanced.py  test_integration_full.py  update_smoke_pointers.py
tests/: rich_flowlogger.py  test_agent_scripts.py  test_api_replay.py  test_api_webhooks.py  (+37 more)
(+16 files in other folders)
